# aurum-ai-engine

./: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
migrations/: 0001_master_accounts_nullable_metaapi.sql  phase_6_5_closed_trades.sql  phase_6_6_analysis_source.sql  phase_6_engine_config.sql  phase_7_currency_optional.sql  phase_7_master_accounts.sql  phase_7_provisioning_nullable.sql
src/: config.py  main.py
src/api/: admin.py  health.py  intents.py  masters.py  positions.py  sniper.py  stats.py  status.py  symbols.py  test_trade.py
src/core/: copyfactory_client.py  master_account_service.py  metaapi_client.py  supabase_client.py  telegram_notifier.py  trade_logger.py
src/engine/: __init__.py  account_bundle.py  close_detector.py  freeze_manager.py  intent_bus.py  master_account.py  order_executor.py  position_poller.py  runtime.py  signal_lock.py  snapshot_fetcher.py  stops_padding.py  symbol_spec_cache.py
src/notifier/: __init__.py  telegram.py
src/products/: __init__.py  gold_ai.py  models.py  multi_cfd_ai.py  position_manager.py
src/risk/: __init__.py  filters.py  models.py  per_day.py  per_trade.py  per_week.py
src/scheduler/: __init__.py  cron_jobs.py  tick_runner.py
src/schemas/: sniper.py
src/services/: chart_img.py  snapshot_storage.py
src/strategy/: __init__.py  ares.py  liquidity_sweep.py  mean_reversion.py  models.py  order_block.py  signals.py  trend_continuation.py
src/token_bridge/: __init__.py  models.py  token_service.py
tests/: test_health.py  test_masters.py  test_sniper.py
(+48 files in other folders)
